--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
   <script src="index.js" charset="utf-8"></script>
 </body>
 <footer>
-  Made with ❤️ in London.
+  2020-01-05.
+  Made by Wolf.
 </footer>
 
 </html>
